--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <a href="#/ex2">example 2</a>
   </nav>
   <div id="app"></div>
-  <script src="./app.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
