--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>PureJS</title>
-  <script type="text/html" id="home">
-    <h1>Start <%= where %>!</h1>
-  </script>
-  <script type="text/html" id="example1">
-    <h1><%= title %></h1>
-    <% for (let i of title) { %>
-      <span><%= i %></span>
-    <% } %>
-  </script>
-  <script type="text/html" id="example2">
-    <h1><%= title %></h1>
-    <button class="my-button">Click me <%= counter %></button>
-  </script>
-  <script type="text/html" id="404">
-    <h1>404 Not found</h1>
-  </script>
-</head>
-<body>
-  <nav>
-    <a href="#">home</a>
-    <a href="#/ex1">example 1</a>
-    <a href="#/ex2">example 2</a>
-  </nav>
-  <div id="app"></div>
-  <script type="module" src="./app.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>PureJS</title>
+
+    <script type="text/html" id="home">
+      <h1>Login page</h1>
+      <div id="msg"><%= msg %></div>
+      <form action="" method="post">
+        <label for="username">User name: </label>
+        <input
+          type="text"
+          name="username"
+          id="username"
+          placeholer="username"
+        />
+
+        <label for="pass">Hasło: </label>
+        <input type="password" name="pass" id="pass" placeholer="password" />
+        <input class="login-button" type="submit" value="Zaloguj" />
+      </form>
+    </script>
+
+    <script type="text/html" id="success">
+      <h1>Success page</h1>
+      <div id="msg"><%= msg %></div>
+    </script>
+    <script type="text/html" id="404">
+      <h1>404 Not found</h1>
+    </script>
+  </head>
+
+  <body>
+    <nav>
+      <a href="#">home</a>
+      <a href="#/ex1">example 1</a>
+      <a href="#/ex2">example 2</a>
+    </nav>
+    <div id="app"></div>
+    <script type="module" src="./app.js"></script>
+  </body>
 </html>
